crates/next-custom-transforms/tests/errors/react-server-components/server-graph/fake-client-entry/output.js
export default function() {
    return null;
}
